--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= form_for @user, html: {multipart: true} do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -19,7 +19,16 @@
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
+  <li>
+    <%= f.label :photo, "Photo" %>
+    <%= f.file_field :photo %>
+  <li>
+
+  <%= f.label :delete_photo, "Remove photo" %>
+  <%= f.check_box :delete_photo %>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+
